# tapshex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  bump.sh  pyproject.toml  pyproject.toml_flit  pyproject.toml_poetry  pytest.ini  requirements.txt
convert/: shexify.py  test_shexify.py
dctap2shex/: cli.py  config.py  defaults.py  mkshex.py  tclasses.py  utils.py  xclasses.py
docs/: build.sh  conf.py  files  index.rst
docs/comparison/: index.rst
docs/config/: index.rst
docs/dctap/: index.rst
docs/dctap_and_csv/: index.rst
docs/dctap_and_shex/: index.rst
docs/elements/: index.rst
docs/extensions/: index.rst
docs/glossary/: index.rst
docs/shex_extensions/: index.rst
example/: dctap.yaml  example01.csv  example01.ipynb  example01.jinja  example01.json  example02.ipynb  example02.jinja  example02.json  example02.shexc
example/example01/: example01.ipynb  example01.jinja
examples/: eric1.shexj  eric1.url  eric2.shexc  eric2.shexj  ex1_failing.ttl  ex1_passing.ttl  ex31_literal_datatype.shexj  ex31_node_kind.shexj  ex31_value_set1.shexj  ex31_value_set2.shexj  ex31_value_set3.shexj  ex31_value_shape.shexj  ex32_triple_constraints.shexj  ex32_triples_constraints_failing.ttl  ex32_triples_constraints_passing.ttl  ex33_shapes.shexj  ex33_shapes2.shexj  ex33_shapes2_passing.ttl  ex33_shapes_failing.ttl  ex33_shapes_passing.ttl  ex34_combining_value_constraints.shexj  ex34_combining_value_constraints_failing.ttl  ex34_combining_value_constraints_passing.ttl  ex37_value_sets1.shexj  ex37_value_sets2.shexj  ex37_value_sets4.shexj  ex37_value_sets_stems.shexj  ex37_value_sets_stems_failing.ttl  ex37_value_sets_stems_passing.ttl
postponed/: cli.py
tap2shex/: __init__.py  cli.py  defaults.py  mkshex.py  utils.py
tapshex/: __init__.py  classes.py  cli.py  config.py  csvreader.py  defaults.py  mkshex.py  shexify.py  template.py  utils.py
tests/: .pylintrc  README.txt  TODO.txt  basic_structure.shexj  conftest.py  dctap_allfeatures.json  eachof_expression  eric3.py  mkshex.py  tapshex.yaml  test_CLASSES__dot_placeholder.py  test_CLASSES__placeholder_for_tripleconstraint.py  test_CONFIG__get_config_extra_element_aliases.py  test_CONFIG__get_shems_stems.py  test_CONFIG__initialize_config_dict.py  test_CONFIG_get_config.py  test_SCX_element_mandrepeat.py  test_SCX_elements_with_URIs.py  test_SCX_picklist.py  test_SCX_validate_warn_if_vCT_used_without_vC.py  test_SCX_warn_if_valueConstraint_not_valid_regex.py  test_SHAPE__convert_booleans.py  test_STATE__are_nonnegative_integers.py  test_STATE__convert_booleans.py  test_STATE__convert_mandatory_to_minoccurs.py  test_STATE__convert_repeatable_to_maxoccurs.py  test_STATE__convert_st_mandatory_to_minoccurs.py  test_STATE__convert_st_repeatable_to_maxoccurs.py  test_STATE__try_to_coerce_nonnegative_integers.py  test_STATE__try_to_coerce_numbers.py  test_STATE__vctype_picklist_quoted_parse.py  test_STATE__warn_if_values_not_nonnegative_integers.py  test_TAPShapeX.py  test_TAPShape_element_with_URIs.py  test_config_get.py  test_convert_sc_mandatory.py  test_convert_sc_mandatory_to_min.py  test_convert_sc_maxoccurs_repeatable.py  test_convert_sc_minoccurs_mandatory.py  test_convert_sc_note.py  (+20 more)
tests/dctaptests/: refresh.sh
tests/hsolbrig/: asdf  renameme
tests/primer/: schema1_0_1.json  schema1_0_2.shexc  schema3_1_2_literal_facet.json  schema3_1_3_node_kind.shexc  schema3_1_3_node_kind.shexj  schema3_1_4_1_value_set_uris.json  schema3_1_4_3_value_set_integers.shexc  schema3_1_5_value_set_valueshape.json  schema3_2_triple_constraints.json  (+16 more)
tests_dctap/: refresh.sh
tests_primer/: dome  super.py  test_me.py
(+178 files in other folders)
